--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-project(client)
+project(server)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -12,13 +12,13 @@ include_directories(server)
 add_executable(client client/client.cpp
         client/snake.cpp client/snake.h
         client/food.cpp client/food.h
-        client/snake_part.cpp client/snake_part.h
+       client/snake_part.cpp client/snake_part.h
         client/server.cpp client/server.h
-        client/game.cpp client/game.h)
-#add_executable(snakes server/server_main.cpp server/server.cpp server/server.h
-#                server/snake.cpp server/snake.h
-#                server/food.cpp server/food.h
+       client/game.cpp client/game.h)
+#add_executable(server server/server_main.cpp server/server.cpp server/server.h
+ #               server/snake.cpp server/snake.h
+ #               server/food.cpp server/food.h
 #                server/snake_part.cpp server/snake_part.h
-#               server/game.cpp server/game.h)
-#target_link_libraries(snakes ${CURSES_LIBRARIES})
+ #              server/game.cpp server/game.h)
+#target_link_libraries(client ${CURSES_LIBRARIES})
 target_link_libraries(client ${CURSES_LIBRARIES})
